[feat] update swagger
